* config/avr/avr.c (avr_mcu_types): Add new MCU types. 	* config/avr/avr.h (CPP_SPEC): Likewise. 	(LINK_SPEC): Likewise. 	(CRT_BINUTILS_SPECS): Likewise. 	* config/avr/t-avr (MULTILIB_MATCHES): Likewise. 	* doc/invoke.texi (AVR Options): Document them.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48604 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/doc/invoke.texi
+++ b/gcc/doc/invoke.texi
@@ -9233,13 +9233,14 @@ at90s2333, at90s2343, at90s4414, at90s4433, at90s4434, at90s8515,
 at90c8534, at90s8535).
 
 Instruction set avr3 is for the classic AVR core with up to 128K program
-memory space (MCU types: atmega103, atmega603).
+memory space (MCU types: atmega103, atmega603, at43usb320, at76c711).
 
 Instruction set avr4 is for the enhanced AVR core with up to 8K program
-memory space (MCU types: atmega83, atmega85).
+memory space (MCU types: atmega8, atmega83, atmega85).
 
 Instruction set avr5 is for the enhanced AVR core with up to 128K program
-memory space (MCU types: atmega161, atmega163, atmega32, at94k).
+memory space (MCU types: atmega16, atmega161, atmega163, atmega32, atmega323,
+atmega64, atmega128, at43usb355, at94k).
 
 @item -msize
 @opindex msize
