* doc/gcc.texi, doc/gccint.texi, doc/cppinternals.texi, 	doc/install.texi, doc/invoke.texi, doc/rtl.texi: Update copyright 	and last update dates.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48610 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-07  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* doc/gcc.texi, doc/gccint.texi, doc/cppinternals.texi,
+	doc/install.texi, doc/invoke.texi, doc/rtl.texi: Update copyright
+	and last update dates.
+
 2002-01-07  Janis Johnson  <janis187@us.ibm.com>
 
 	* doc/rtl.texi (Flags): Clean up documentation of RTL flags
