--- a/gcc/doc/gccint.texi
+++ b/gcc/doc/gccint.texi
@@ -48,7 +48,7 @@
 
 @macro copyrightnotice
 Copyright @copyright{} 1988, 1989, 1992, 1993, 1994, 1995, 1996, 1997, 1998,
-1999, 2000, 2001 Free Software Foundation, Inc.
+1999, 2000, 2001, 2002 Free Software Foundation, Inc.
 @end macro
 @ifnottex
 @dircategory Programming
@@ -88,7 +88,7 @@ included in the section entitled ``GNU Free Documentation License''.
 @sp 2
 @center Richard M. Stallman
 @sp 3
-@center Last updated 7 December 2001
+@center Last updated 7 January 2002
 @sp 1
 
 @center for GCC @value{version-GCC}
